--- a/index.html
+++ b/index.html
@@ -18,60 +18,38 @@
     <nav>
         <div class="logo">
             <a href="#">
-                <img src="./images/logo.png" alt="Logo written StackOverflow-lite">
+                <img src="./images/logo.png" alt="StackOverflow-lite">
             </a>
         </div>
-        <ol>
+        <ul class="menu">
+            <li>
+                <div class="search_box">
+                    <input type="search" placeholder="search for questions...">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+            </li>
             <li><a href="#">Home</a></li>
-        </ol>
-        <div class="search_box">
-            <i class="fa-solid fa-magnifying-glass">
-                <input type="search" placeholder="search for questions..."></i>
-        </div>
-        <button class="signup">SignUp</button>
+            <li><a href="#">About</a></li>
+
+        </ul>
     </nav>
-
-    <div>
-        <img src="./images/Q&A pic.png" alt="picture of someone asking and getting answers- for a certain question">
-    </div>
-
-    <div>
-        <p>Great minds discuss ideas, what better way to do that than sharing your knowledge.</p>
-        <p> Stack Overflow Lite is a public platform building the definitive collection of coding questions & answers.
-        </p>
-        <p>A community-based space to ask questions, find and contribute answers to technical challenges.</p>
-        <p>There is no shame in not knowing something. The shame is not willing to learn.</p>
-    </div>
-
-    <div class="login_form">
-        <div class="login_info">
-            <form>
-                <div>
-                    <p>Login</p>
-                    <p>Sign in to your account</p>
-                </div>
-                <div>
-                    <i class="fa-solid fa-user"></i>
-                    <input type="text" placeholder="Username" name="username" required>
-                </div>
-                <div>
-                    <i class="fa-solid fa-key"></i>
-                    <input type="text" placeholder="Password" name="password" required>
-                </div>
-
-                <div>
-                    <button type="submit">Login</button>
-                </div>
-
-                <span>I forgot my password <a href="#">click here</a> to reset</span>
-
-                <div>
-                    <button type="button"> SignUp New Account</button>
-                </div>
-
-            </form>
+    <div class="hero">
+        <div class="txt-content">
+            <p>Great minds discuss ideas, what better way to do that than sharing your knowledge.</p>
+            <p> Stack Overflow Lite is a public platform building the definitive collection of coding questions &
+                answers.
+            </p>
+            <p>A community-based space to ask questions, find and contribute answers to technical challenges.</p>
+            <p>There is no shame in not knowing something. The shame is not willing to learn.</p>
+            <div class="actions">
+                <a href="./signup-info/sign-up.html"><button class="signup">Sign Up</button></a>
+                <a href="./login/login.html"><button class="login-btn">Login</button></a>
+            </div>
+        </div>
+        <div class="img">
+            <img src="images/Q&A-pic.png" alt="picture of someone asking and getting answers- for a certain question">
         </div>
     </div>
 </body>
-
 </html>
+
