--- a/dev-project/index.html
+++ b/dev-project/index.html
@@ -11,14 +11,14 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./resources/css/styles.css">
 </head>
 
 <body>
     <nav>
         <div class="logo">
             <a href="#">
-                <img src="./images/logo.png" alt="StackOverflow-lite">
+                <img src="./resources/images/logo.png" alt="StackOverflow-lite">
             </a>
         </div>
         <ul class="menu">
@@ -42,12 +42,12 @@
             <p>A community-based space to ask questions, find and contribute answers to technical challenges.</p>
             <p>There is no shame in not knowing something. The shame is not willing to learn.</p>
             <div class="actions">
-                <a href="./signup-info/sign-up.html"><button class="signup">Sign Up</button></a>
-                <a href="./login/login.html"><button class="login-btn">Login</button></a>
+                <a href="sign-up.html"><button class="signup">Sign Up</button></a>
+                <a href="login.html"><button class="login-btn">Login</button></a>
             </div>
         </div>
         <div class="img">
-            <img src="images/Q&A-pic.png" alt="picture of someone asking and getting answers- for a certain question">
+            <img src="./resources/images/Q&A-pic.png" alt="picture of someone asking and getting answers- for a certain question">
         </div>
     </div>
 </body>
