--- a/dev-project/sign-up.html
+++ b/dev-project/sign-up.html
@@ -11,14 +11,14 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="signup.css">
+    <link rel="stylesheet" href="./resources/css/signup.css">
 </head>
 
 <body>
     <nav>
         <div class="logo">
-            <a href="../index.html">
-                <img src="../images/logo.png" alt="StackOverflow-lite">
+            <a href="index.html">
+                <img src="./resources/images/logo.png" alt="StackOverflow-lite">
             </a>
         </div>
         <ul class="menu">
@@ -35,7 +35,7 @@
     </nav>
 
     <div>
-        <img src="../images/signup-pic.png" alt="Picture showing someone signing up">
+        <img src="./resources/images/signup-pic.png" alt="Picture showing someone signing up">
     </div>
 
     <div>
