ft(project design): add more files
* validate signup and login
* create a question form
* create where the questions will be posted

--- a/dev-project/main.html
+++ b/dev-project/main.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StackOverflow Lite</title>
+    <title>Home Profile</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./resources/css/styles.css">
+    <link rel="stylesheet" href="./resources/css/main.css">
 </head>
 
 <body>
@@ -30,27 +30,17 @@
             </li>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="main.html">Main</a></li>
-
+            <li><a href="#">Main</a></li>
         </ul>
     </nav>
-    <div class="hero">
-        <div class="txt-content">
-            <p>Great minds discuss ideas, what better way to do that than sharing your knowledge.</p>
-            <p> Stack Overflow Lite is a public platform building the definitive collection of coding questions &
-                answers.
-            </p>
-            <p>A community-based space to ask questions, find and contribute answers to technical challenges.</p>
-            <p>There is no shame in not knowing something. The shame is not willing to learn.</p>
-            <div class="actions">
-                <a href="sign-up.html"><button class="signup">Sign Up</button></a>
-                <a href="login.html"><button class="login-btn">Login</button></a>
-            </div>
-        </div>
-        <div class="img">
-            <img src="./resources/images/Q&A-pic.png" alt="picture of someone asking and getting answers- for a certain question">
-        </div>
-    </div>
-</body>
-</html>
+    <section class="main">
 
+        <div class="btn">
+            <a href="question.html"><button class="add-btn">Add Question</button></a>
+        </div>
+
+        <div class="questions"></div>
+    </section>
+</body>
+
+</html>
