--- a/dev-project/sign-up.html
+++ b/dev-project/sign-up.html
@@ -68,12 +68,12 @@
                 <button type="submit" id="signup-btn">Sigup</button>
             </div>
 
-            <p>Already have an account? <a href="#">Login here</a></p>
+            <p>Already have an account? <a href="login.html">Login here</a></p>
         </form>
 
     </div>
 
-    <script type="text/javascript" src="./resources/javascript/signup.js"></script>>
+    <script type="text/javascript" src="./resources/javascript/signup.js"></script>
 </body>
 
 </html>
