ft(project design): get question
* was able to get questions from the server to the site

--- a/dev-project/main.html
+++ b/dev-project/main.html
@@ -33,14 +33,24 @@
             <li><a href="#">Main</a></li>
         </ul>
     </nav>
+
+    <div class="sidenav">
+        <a href="#">Questions</a>
+        <a href="#">Tags</a>
+        <a href="#">Users</a>
+      </div>
+
     <section class="main">
+        <div class="container">
+            <div id="questions"></div>
+        </div>
 
         <div class="btn">
             <a href="question.html"><button class="add-btn">Add Question</button></a>
         </div>
-
-        <div class="questions"></div>
     </section>
+    <script type="text/javascript" src="./resources/javascript/main.js"></script>
+
 </body>
 
 </html>
