ft(project design): add more features to app
* add an answer form
* style the site

--- a/dev-project/index.html
+++ b/dev-project/index.html
@@ -36,12 +36,12 @@
     </nav>
     <div class="hero">
         <div class="txt-content">
-            <p>Great minds discuss ideas, what better way to do that than sharing your knowledge.</p>
+            <p>Great minds discuss ideas, what better way to do that than sharing your knowledge.</p><br>
             <p> Stack Overflow Lite is a public platform building the definitive collection of coding questions &
                 answers.
-            </p>
-            <p>A community-based space to ask questions, find and contribute answers to technical challenges.</p>
-            <p>There is no shame in not knowing something. The shame is not willing to learn.</p>
+            </p><br>
+            <p>A community-based space to ask questions, find and contribute answers to technical challenges.</p><br>
+            <p>There is no shame in not knowing something. The shame is not willing to learn.</p><br>
             <div class="actions">
                 <a href="sign-up.html"><button class="signup">Sign Up</button></a>
                 <a href="login.html"><button class="login-btn">Login</button></a>
