--- a/dev-project/login.html
+++ b/dev-project/login.html
@@ -30,12 +30,13 @@
             </li>
             <li><a href="index.html">Home</a></li>
             <li><a href="#">About</a></li>
+            <li><a href="main.html">Main</a></li>
 
         </ul>
     </nav>
 
     <div class="login">
-        <form class="login-info" onsubmit="validateLoginForm(event)">
+        <form id="login-form" class="login-info" method="post">
             <h1>Login</h1>
             <h4>Sign in to your account</h4>
             <label for=" email"><b>Email :</b></label>
@@ -52,7 +53,7 @@
 
             <div class="psw"><span>I forgot my password <a href="#">click here</a> to reset</span></div>
 
-            <div class="psw">Not a member? <a href="#"> sign-up</a> now</div>
+            <div class="psw">Not a member? <a href="sign-up.html"> sign-up</a> now</div>
         </form>
     </div>
 
