--- a/dev-project/question-form.html
+++ b/dev-project/question-form.html
@@ -35,7 +35,7 @@
     </nav>
     <div class="form-data">
         <h1>Ask a public question</h1>
-        <form class="question-form" onsubmit="validateQuestionForm(event)">
+        <form class="question-form" id="qs-form">
             <label for="title"><b>Title</b></label>
             <div>
                 <p>Be specific and imagine you're asking a question to another person</p>
