--- a/dev-project/main.html
+++ b/dev-project/main.html
@@ -17,7 +17,7 @@
 <body>
     <nav>
         <div class="logo">
-            <a href="#">
+            <a href="main.html">
                 <img src="./resources/images/logo.png" alt="StackOverflow-lite">
             </a>
         </div>
@@ -38,17 +38,20 @@
         <a href="#">Questions</a>
         <a href="#">Tags</a>
         <a href="#">Users</a>
-      </div>
+    </div>
 
-    <section class="main">
-        <div class="container">
-            <div id="questions"></div>
+    <div class="info">
+        <div class="header">
+            Top Questions 
         </div>
-
         <div class="btn">
-            <a href="question.html"><button class="add-btn">Add Question</button></a>
+            <a href="question-form.html"><button>Add Question</button></a>
         </div>
-    </section>
+    </div>
+
+    <div class="qs-info">
+            <div id="questions" class="questions"></div>
+    </div>
     <script type="text/javascript" src="./resources/javascript/main.js"></script>
 
 </body>
