--- a/dev-project/sign-up.html
+++ b/dev-project/sign-up.html
@@ -30,16 +30,17 @@
             </li>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
+            <li><a href="main.html">Main</a>
 
         </ul>
     </nav>
 
     <div>
-        <img src="./resources/images/signup-pic.png" alt="Picture showing someone signing up">
+        <img id="img" src="./resources/images/signup-pic.png" alt="Picture showing someone signing up">
     </div>
 
     <div>
-        <form class="form-info" onsubmit="validateSignupForm(event)">
+        <form id="signup-form" class="form-info" method="POST">
             <h1>Sign Up</h1>
             <label for="first_name"><b>First_Name :</b></label>
             <input type="text" placeholder="Enter your First name" name="first_name" id="first_name" required><br>
