--- a/dev-project/sign-up.html
+++ b/dev-project/sign-up.html
@@ -42,11 +42,11 @@
     <div>
         <form id="signup-form" class="form-info" method="POST">
             <h1>Sign Up</h1>
-            <label for="first_name"><b>First_Name :</b></label>
+            <label for="first_name"><b>First Name :</b></label>
             <input type="text" placeholder="Enter your First name" name="first_name" id="first_name" required><br>
             <div class="error-msg"> <span id="firstname-err"></span></div>
 
-            <label for="last_name"><b>Last_Name :</b></label>
+            <label for="last_name"><b>Last Name :</b></label>
             <input type="text" placeholder="Enter your Last name" name="last_name" id="last_name" required><br>
             <div class="error-msg"> <span id="lastname-err"></span></div>
 
@@ -66,7 +66,7 @@
             <div class="error-msg"> <span id="password-err"></span></div>
 
             <div class="btn-box">
-                <button type="submit" id="signup-btn">Sigup</button>
+                <button type="submit" id="signup-btn">Signup</button>
             </div>
 
             <p>Already have an account? <a href="login.html">Login here</a></p>
