ft(project design): modify the website
* create a pages folder for all my other pages
* finish the design of the home page

--- a/dev-project/index.html
+++ b/dev-project/index.html
@@ -30,27 +30,26 @@
             </li>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="main.html">Main</a></li>
+            <li><a href="./resources/pages/questions.html">Questions</a></li>
 
         </ul>
     </nav>
     <div class="hero">
         <div class="txt-content">
-            <p>Great minds discuss ideas, what better way to do that than sharing your knowledge.</p><br>
+            <h1>Great minds discuss ideas, what better way to do that than sharing your knowledge.</h1><br>
             <p> Stack Overflow Lite is a public platform building the definitive collection of coding questions &
-                answers.
-            </p><br>
-            <p>A community-based space to ask questions, find and contribute answers to technical challenges.</p><br>
-            <p>There is no shame in not knowing something. The shame is not willing to learn.</p><br>
+                answers.A community-based space to ask questions, find and contribute answers to technical challenges.
+                There is no shame in not knowing something. The shame is not willing to learn.</p>
             <div class="actions">
-                <a href="sign-up.html"><button class="signup">Sign Up</button></a>
-                <a href="login.html"><button class="login-btn">Login</button></a>
+                <a href="./resources/pages/sign-up.html"><button class="signup">Sign Up</button></a>
+                <a href="./resources/pages/login.html"><button class="login">Login</button></a>
             </div>
         </div>
         <div class="img">
-            <img src="./resources/images/Q&A-pic.png" alt="picture of someone asking and getting answers- for a certain question">
+            <img src="./resources/images/Q&A-pic.png"
+                alt="picture of someone asking and getting answers for a question">
         </div>
     </div>
 </body>
-</html>
 
+</html>
