--- a/dev-project/resources/pages/answers.html
+++ b/dev-project/resources/pages/answers.html
@@ -11,14 +11,14 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./resources/css/question.css">
+    <link rel="stylesheet" href="../css/answers.css">
 </head>
 
 <body>
     <nav>
         <div class="logo">
             <a href="main.html">
-                <img src="./resources/images/logo.png" alt="StackOverflow-lite">
+                <img src="../images/logo.png" alt="StackOverflow-lite">
             </a>
         </div>
         <ul class="menu">
@@ -28,7 +28,7 @@
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
             </li>
-            <li><a href="main.html">Home</a></li>
+            <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
         </ul>
     </nav>
@@ -56,7 +56,7 @@
             <button type="submit" id="ans-btn">post your answer</button>
         </div>
     </form>
-    <script type="text/javascript" src="./resources/javascript/question.js"></script>
+    <script type="text/javascript" src="../javascript/answers.js"></script>
 
 </body>
 
