--- a/dev-project/resources/pages/question-form.html
+++ b/dev-project/resources/pages/question-form.html
@@ -11,14 +11,14 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./resources/css/question-form.css">
+    <link rel="stylesheet" href="../css/question-form.css">
 </head>
 
 <body>
     <nav>
         <div class="logo">
             <a href="#">
-                <img src="./resources/images/logo.png" alt="StackOverflow-lite">
+                <img src="../images/logo.png" alt="StackOverflow-lite">
             </a>
         </div>
         <ul class="menu">
@@ -28,9 +28,9 @@
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
             </li>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="main.html">Main</a></li>
+            <li><a href="#">Main</a></li>
         </ul>
     </nav>
     <div class="form-data">
@@ -56,7 +56,7 @@
                 <button type="submit" id="qs-btn">post your question</button>
             </div>
         </form>
-        <script type="text/javascript" src="./resources/javascript/question-form.js"></script>
+        <script type="text/javascript" src="../javascript/question-form.js"></script>
 </body>
 
 </html>
