--- a/dev-project/resources/pages/sign-up.html
+++ b/dev-project/resources/pages/sign-up.html
@@ -11,14 +11,14 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./resources/css/signup.css">
+    <link rel="stylesheet" href="../css/signup.css">
 </head>
 
 <body>
     <nav>
         <div class="logo">
-            <a href="index.html">
-                <img src="./resources/images/logo.png" alt="StackOverflow-lite">
+            <a href="#">
+                <img src="../images/logo.png" alt="StackOverflow-lite">
             </a>
         </div>
         <ul class="menu">
@@ -30,13 +30,13 @@
             </li>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="main.html">Main</a>
+            <li><a href="./questions.html">Questions</a>
 
         </ul>
     </nav>
 
     <div>
-        <img id="img" src="./resources/images/signup-pic.png" alt="Picture showing someone signing up">
+        <img id="img" src="../images/signup-pic.png" alt="Picture showing someone signing up">
     </div>
 
     <div>
@@ -69,12 +69,12 @@
                 <button type="submit" id="signup-btn">Signup</button>
             </div>
 
-            <p>Already have an account? <a href="login.html">Login here</a></p>
+            <p>Already have an account? <a href="./login.html">Login here</a></p>
         </form>
 
     </div>
 
-    <script type="text/javascript" src="./resources/javascript/signup.js"></script>
+    <script type="text/javascript" src="../javascript/signup.js"></script>
 </body>
 
 </html>
