--- a/dev-project/resources/pages/login.html
+++ b/dev-project/resources/pages/login.html
@@ -11,14 +11,14 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./resources/css/login.css">
+    <link rel="stylesheet" href="../css/login.css">
 </head>
 
 <body>
     <nav>
         <div class="logo">
             <a href="index.html">
-                <img src="./resources/images/logo.png" alt="StackOverflow-lite">
+                <img src="../images/logo.png" alt="StackOverflow-lite">
             </a>
         </div>
         <ul class="menu">
@@ -57,7 +57,7 @@
         </form>
     </div>
 
-    <script type="text/javascript" src="./resources/javascript/login.js"></script>
+    <script type="text/javascript" src="../javascript/login.js"></script>
 </body>
 
 </html>
