--- a/dev-project/resources/pages/questions.html
+++ b/dev-project/resources/pages/questions.html
@@ -11,14 +11,14 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./resources/css/main.css">
+    <link rel="stylesheet" href="../css/questions.css">
 </head>
 
 <body>
     <nav>
         <div class="logo">
-            <a href="main.html">
-                <img src="./resources/images/logo.png" alt="StackOverflow-lite">
+            <a href="#">
+                <img src="../images/logo.png" alt="StackOverflow-lite">
             </a>
         </div>
         <ul class="menu">
@@ -30,7 +30,7 @@
             </li>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Main</a></li>
+            <li><a href="#">Questions</a></li>
         </ul>
     </nav>
 
@@ -45,14 +45,14 @@
             Top Questions 
         </div>
         <div class="btn">
-            <a href="question-form.html"><button>Add Question</button></a>
+            <a href="./question-form.html"><button>Add Question</button></a>
         </div>
     </div>
 
     <div class="qs-info">
             <div id="questions" class="questions"></div>
     </div>
-    <script type="text/javascript" src="./resources/javascript/main.js"></script>
+    <script type="text/javascript" src="../javascript/questions.js"></script>
 
 </body>
 
