ft(project design): signup page
* change the signup form design page

--- a/dev-project/resources/pages/login.html
+++ b/dev-project/resources/pages/login.html
@@ -17,7 +17,7 @@
 <body>
     <nav>
         <div class="logo">
-            <a href="index.html">
+            <a href="#">
                 <img src="../images/logo.png" alt="StackOverflow-lite">
             </a>
         </div>
@@ -28,9 +28,9 @@
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
             </li>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="main.html">Main</a></li>
+            <li><a href="#">Questions</a></li>
 
         </ul>
     </nav>
