--- a/dev-project/resources/pages/sign-up.html
+++ b/dev-project/resources/pages/sign-up.html
@@ -34,46 +34,43 @@
 
         </ul>
     </nav>
+    <section class="signup-info">
+        <div>
+            <form id="signup-form" class="form-info" method="POST">
+                <h1>Sign Up</h1>
+                <label for="first_name">First Name :</label>
+                <input type="text" placeholder="Enter your First name" name="first_name" id="first_name" required><br>
+                <div class="error-msg"><span id="firstname-err"></span></div>
 
-    <div>
-        <img id="img" src="../images/signup-pic.png" alt="Picture showing someone signing up">
-    </div>
+                <label for="last_name">Last Name :</label>
+                <input type="text" placeholder="Enter your Last name" name="last_name" id="last_name" required><br>
+                <div class="error-msg"><span id="lastname-err"></span></div>
 
-    <div>
-        <form id="signup-form" class="form-info" method="POST">
-            <h1>Sign Up</h1>
-            <label for="first_name"><b>First Name :</b></label>
-            <input type="text" placeholder="Enter your First name" name="first_name" id="first_name" required><br>
-            <div class="error-msg"> <span id="firstname-err"></span></div>
-
-            <label for="last_name"><b>Last Name :</b></label>
-            <input type="text" placeholder="Enter your Last name" name="last_name" id="last_name" required><br>
-            <div class="error-msg"> <span id="lastname-err"></span></div>
-
-
-            <label for="username"><b>Username :</b></label>
-            <input type="text" placeholder="Enter Username" name="username" id="username" required><br>
-            <div class="error-msg"> <span id="username-err"></span></div>
+                <label for="username">Username :</label>
+                <input type="text" placeholder="Enter Username" name="username" id="username" required><br>
+                <div class="error-msg"><span id="username-err"></span></div>
 
 
-            <label for="email"><b>Email :</b></label>
-            <input type="text" placeholder="Enter Email" name="email" id="email" required><br>
-            <div class="error-msg"> <span id="email-err"></span></div>
+                <label for="email">Email :</label>
+                <input type="text" placeholder="Enter Email" name="email" id="email" required><br>
+                <div class="error-msg"><span id="email-err"></span></div>
 
 
-            <label for="password"><b>Password :</b></label>
-            <input type="password" placeholder="Enter Password" name="password" id="password" required><br>
-            <div class="error-msg"> <span id="password-err"></span></div>
+                <label for="password">Password :</label>
+                <input type="password" placeholder="Enter Password" name="password" id="password" required><br>
+                <div class="error-msg"><span id="password-err"></span></div>
 
-            <div class="btn-box">
-                <button type="submit" id="signup-btn">Signup</button>
-            </div>
+                <div class="btn-box">
+                    <button type="submit" id="signup-btn">Signup</button>
+                </div>
 
-            <p>Already have an account? <a href="./login.html">Login here</a></p>
-        </form>
-
-    </div>
-
+                <p>Already have an account? <a href="../pages/login.html">Login here</a></p>
+            </form>
+        </div>
+        <div class="signup-img">
+            <img id="img" src="../images/signup-pic.png" alt="Picture showing someone signing up">
+        </div>
+    </section>
     <script type="text/javascript" src="../javascript/signup.js"></script>
 </body>
 
