feature(project design): login page
* added access token to localhost
* modify the design

--- a/dev-project/resources/pages/sign-up.html
+++ b/dev-project/resources/pages/sign-up.html
@@ -52,7 +52,7 @@
 
 
                 <label for="email">Email :</label>
-                <input type="text" placeholder="Enter Email" name="email" id="email" required><br>
+                <input type="email" placeholder="Enter Email" name="email" id="email" required><br>
                 <div class="error-msg"><span id="email-err"></span></div>
 
 
